k8s/prod/deployment_cron.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sc-cron-deployment
  namespace: prod-stablecog
  labels:
    app: sc-cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc-cron
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sc-cron
    spec:
      containers:
        - name: sc-cron
          image: replaceme
      imagePullSecrets:
        - name: akscr
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 512Mi
          command: ["/bin/sh", "-c"]
          args: ["/app/cron -all"]
          imagePullPolicy: "Always"
