k8s/prod/deployment_server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sc-server-deployment
  namespace: prod-stablecog
  labels:
    app: sc-server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sc-server
  template:
    metadata:
      labels:
        app: sc-server
    spec:
      containers:
        - name: sc-server
          image: replaceme
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 13337
          imagePullPolicy: "Always"
          startupProbe:
            httpGet:
              path: /v1/health
              port: 13337
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 13337
            initialDelaySeconds: 0
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 13337
            initialDelaySeconds: 15
            periodSeconds: 10
