k8s/prod/deployment_upload.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sc-uploadapi-deployment
  namespace: prod-stablecog
  labels:
    app: sc-uploadapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sc-uploadapi
  template:
    metadata:
      labels:
        app: sc-uploadapi
    spec:
      containers:
        - name: sc-uploadapi
          image: replaceme
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
          command: ["/bin/sh", "-c"]
          args: ["/app/uploadapi"]
          ports:
            - containerPort: 13338
          startupProbe:
            httpGet:
              path: /upload/health
              port: 13338
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /upload/health
              port: 13338
            initialDelaySeconds: 0
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /upload/health
              port: 13338
            initialDelaySeconds: 15
            periodSeconds: 10
          imagePullPolicy: "Always"
      imagePullSecrets:
        - name: akscr
