k8s/prod/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: server-service
  namespace: prod-stablecog
spec:
  selector:
    app: sc-server
  type: LoadBalancer
  ports:
    - port: 13337
      targetPort: 13337
---
kind: Service
apiVersion: v1
metadata:
  name: upload-service
  namespace: prod-stablecog
spec:
  selector:
    app: sc-uploadapi
  type: LoadBalancer
  ports:
    - port: 13338
      targetPort: 13338
